--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="type-test">
 			<h1>Hello World</h1>
-			<h4>Swiss Shit</h1>
+			<h4>Swiss is this easy</h1>
 		</div>
 
 		<script>
@@ -23,15 +23,15 @@
 				})
 				$(this).css('font-family','Helvetica');
 				$(this).animate({
-						fontSize : '90px',
+						fontSize : '60px',
 						color: '#FFFFFF',
 						marginLeft: '20%',
 				},3000);
 				$('h4').css('color','#ffffff');
-				$('h4').fadeIn();
+				$('h4').fadeIn(3000);
 				$('h4').animate({
 					marginLeft : '20%'
-				})
+				},3000)
 			});
 		</script>
 	</body>
