--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>
 
 		<script>
-			$('.type-test').click(function(){
+			/* $('.type-test').click(function(){
 				$('body').animate({
 					backgroundColor : '#ff0000'
 				})
@@ -32,7 +32,7 @@
 				$('h4').animate({
 					marginLeft : '20%'
 				},3000)
-			});
+			}); */
 		</script>
 	</body>
 
